--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,8 +12,9 @@
 
 <main>
   <div class="jumbotron">
-    <h1>Register to the Survey Site</h1>
-    <p>This is a landing Page for register!</p>
+    <h1>Oops!</h1>
+    <p>This page does not exist!</p>
+    <a class="btn btn-outline" href="/">Return to Home</a>
   </div>
 </main>
 
