--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,28 @@
 <main>
   <div class="jumbotron">
     <h1>Login to the Survey Site</h1>
-    <p>This is a landing Page for login!</p>
+    <p>You must login to proceed!</p>    
   </div>
+
+  <section>
+    <div class="container py-5">
+        <form action="/login" method="post">
+            <div class="form-group">
+                <label for="emailInput">Email</label>
+                <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Enter email" name="email" required>
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              </div>
+              <div class="form-group">
+                <label for="passwordInput">Password</label>
+                <input type="password" class="form-control" id="passwordInput" placeholder="Password" name="password" required>
+              </div>
+              <button type="submit" class="btn btn-block btn-primary">Login</button>
+        </form>
+        <p class="text-center py-3">
+            <a href="/register">Not a user? Register Now</a>
+        </p>        
+    </div>
+  </section>
 </main>
 
 <footer>
