--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,8 +13,32 @@
 <main>
   <div class="jumbotron">
     <h1>Register to the Survey Site</h1>
-    <p>This is a landing Page for register!</p>
+    <p>Register to create your own surveys</p>
   </div>
+
+  <section>
+    <div class="container py-5">
+        <form action="/register" method="post">
+            <div class="form-group">
+                <label for="emailInput">Email</label>
+                <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Enter email" name="email" required>
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              </div>
+              <div class="form-group">
+                <label for="nameInput">Name</label>
+                <input type="text" class="form-control" id="nameInput" placeholder="Enter Name" name="name" required>                
+              </div>
+              <div class="form-group">
+                <label for="passwordInput">Password</label>
+                <input type="password" class="form-control" id="passwordInput" placeholder="Password" name="password" required>
+              </div>
+              <button type="submit" class="btn btn-block btn-primary">Register</button>
+        </form>
+        <p class="text-center py-3">
+            <a href="/login">Existing user? Login Now</a>
+        </p>        
+    </div>
+  </section>
 </main>
 
 <footer>
