Improved Auth and Final Touches

--- a/views/add_survey.ejs
+++ b/views/add_survey.ejs
@@ -15,6 +15,13 @@
     <h1>New Survey</h1>
     <p>Create a new survey!</p>
   </div>
+  <section>
+    <div class="container">
+      <form action="/create-survey" method="post">
+        
+      </form>
+    </div>
+  </section>
 </main>
 
 <footer>
