--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,6 +17,7 @@
 
   <section>
     <div class="container py-5">
+      <p class="alert alert-warning" role="alert"><%= msg %></p>
         <form action="/login" method="post">
             <div class="form-group">
                 <label for="emailInput">Email</label>
